Listas ordenadas e não ordenadas

--- a/HTML 5/index.html
+++ b/HTML 5/index.html
@@ -10,14 +10,22 @@
     <body>
 
         <h2>Mapa do Site</h2>
-        <ul type="circle">
+
+        <!-----    tipos de Lista não ordenada são Circle, Disc, Square -->
+
+        <ul type="Disc">
             <li>home</li>
+            <li>Seja um Revendedor</li>
+            <li>Sapatos</li>
+            <li>Sandalias</li>
             <li>Quem somos</li>
             <li>Contato</li>
         </ul>
 
         <h2>Perguntas</h2>
-        <ol type="I">
+
+        <!--- Tipos de Listas ORDENADAS são i, I, a, A, 1-->
+        <ol type="1">
             <li>Lamborgini</li>
             <li>Ferrari</li>
             <li>Porsche</li>
