Testando os conhecimentos

--- a/HTML 5/index.html
+++ b/HTML 5/index.html
@@ -9,37 +9,48 @@
 
     <body>
 
-        <h2>Mapa do Site</h2>
+        <h2>A empresa</h2>
 
-        <!-----    tipos de Lista não ordenada são Circle, Disc, Square -->
+            <p> Lorem Ipsum is simply dummy text of the printing and 
+            typesetting industry. Lorem Ipsum has been the industry's 
+            standard dummy text ever since the 1500s, when an unknown
+            printer took a galley of type and scrambled it to make a 
+            type specimen book. It has survived not only five centuries,
+             but also the leap into electronic typesetting, remaining essentially
+              unchanged. It was popularised in the 1960s with the release of
+               Letraset sheets containing Lorem Ipsum passages, and more recently
+                with desktop publishing software like Aldus PageMaker including 
+                versions of Lorem Ipsum.
+            </p>
 
-        <ul type="Disc">
-            <li>home</li>
-            <li>Seja um Revendedor</li>
-            <li>Sapatos</li>
-            <li>Sandalias</li>
-            <li>Quem somos</li>
-            <li>Contato</li>
-        </ul>
+                <hr>
 
-        <h2>Perguntas</h2>
+        <h2> Vantagens de ser cliente</h2>    
 
-        <!--- Tipos de Listas ORDENADAS são i, I, a, A, 1-->
-        <ol type="1">
-            <li>Lamborgini</li>
-            <li>Ferrari</li>
-            <li>Porsche</li>
-            <li>Camaro</li>
-            <li>Mustang</li>
-            <li>Volks</li>
-                
+            <ol type="1" >
+                <li> Atendimento <Strong> rápido</Strong></li>
+                <li> Preços especiais</li>
+                <li> Muitas cidades</li>
 
+            </ol>    
 
+        <h2>O que os clientes estão dizendo:</h2>
+
+        <p><em>"Gostei demais do atendimento, 
+            foi muito rápido e com certeza irei
+             voltar!"</em>
+            </br> <strong>Maria Almeida</strong>
             
+            <hr>
 
-        </ol> 
+            <h2>Mapa do site</h2>
 
+                <ul>
+                    <li> Home</li>
+                    <li> Quem somos </li>
+                    <li> Contato </li>
 
+                </ul>
     </body>
   
 
