--- a/HTML 5/index.html
+++ b/HTML 5/index.html
@@ -7,50 +7,11 @@
         <meta charset="uft-8">
     </head>
 
-    <body>
+    <body> 
+        <!---como inserir imagens-->
+        
+        <img src="Imagens/ferrari.jpg" width="400" height="200">
 
-        <h2>A empresa</h2>
-
-            <p> Lorem Ipsum is simply dummy text of the printing and 
-            typesetting industry. Lorem Ipsum has been the industry's 
-            standard dummy text ever since the 1500s, when an unknown
-            printer took a galley of type and scrambled it to make a 
-            type specimen book. It has survived not only five centuries,
-             but also the leap into electronic typesetting, remaining essentially
-              unchanged. It was popularised in the 1960s with the release of
-               Letraset sheets containing Lorem Ipsum passages, and more recently
-                with desktop publishing software like Aldus PageMaker including 
-                versions of Lorem Ipsum.
-            </p>
-
-                <hr>
-
-        <h2> Vantagens de ser cliente</h2>    
-
-            <ol type="1" >
-                <li> Atendimento <Strong> rápido</Strong></li>
-                <li> Preços especiais</li>
-                <li> Muitas cidades</li>
-
-            </ol>    
-
-        <h2>O que os clientes estão dizendo:</h2>
-
-        <p><em>"Gostei demais do atendimento, 
-            foi muito rápido e com certeza irei
-             voltar!"</em>
-            </br> <strong>Maria Almeida</strong>
-            
-            <hr>
-
-            <h2>Mapa do site</h2>
-
-                <ul>
-                    <li> Home</li>
-                    <li> Quem somos </li>
-                    <li> Contato </li>
-
-                </ul>
     </body>
   
 
