--- a/HTML 5/contato.html
+++ b/HTML 5/contato.html
@@ -3,18 +3,18 @@
 <html>
 
     <head> 
-        <title> Pagina principal </title>
+        <title> Pagina de contato </title>
         <meta charset="uft-8">
     </head>
 
     <body> 
+
         <a href="index.html">Home</a>
         |
 
         <a href="contato.html">Contato</a>
        
-
-        <h2> Pagina principal </h2>
+        <h2> Pagina de contato </h2>
         <p> Lorem Ipsum é simplesmente uma 
             simulação de texto da indústria
             tipográfica e de impressos, e
@@ -34,4 +34,3 @@
   
 
 </html>
-
