Modificações aleatorias com Bootstrap

--- a/Projeto 1/quemsomos.html
+++ b/Projeto 1/quemsomos.html
@@ -7,7 +7,7 @@
         <meta charset="uft-8">
     </head>
 
-    <body background="arquivos/fundo.png"> 
+    <body background="arquivos/fundo1.png"> 
 
         <table border="0" width="900" align="center">
             <tr>
